--- a/packages/blocks/package.json
+++ b/packages/blocks/package.json
@@ -30,6 +30,7 @@
     "next": "^13.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "@types/react": "^18.0.28",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "chromatic": "^6.17.3",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -56,6 +58,7 @@
     "prop-types": "15.8.1",
     "run-script-os": "^1.1.6",
     "storybook": "7.0.4",
+    "storybook-addon-variants": "^0.2.0",
     "tsc-alias": "^1.8.5",
     "vite": "^4.2.1",
     "vite-plugin-dts": "^2.2.0"
