Trigger blocks workflow

--- a/.github/workflows/blocks.yml
+++ b/.github/workflows/blocks.yml
@@ -22,4 +22,4 @@ jobs:
         uses: chromaui/action@v1
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-          storybookBaseDir: ./packages/blocks
+          workingDir: packages/blocks/
