--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   ],
   "scripts": {
     "postinstall": "yarn --cwd packages/server --production=false; yarn --cwd packages/server build"
+  },
+  "engines": {
+    "npm": ">=8.19.2 <9.0.0",
+    "node": ">=18.12.1 <20.0.0"
   }
 }
