--- a/packages/core/.eslintrc.json
+++ b/packages/core/.eslintrc.json
@@ -18,11 +18,13 @@
     "react/display-name": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/ban-ts-comment": "warn",
     "prettier/prettier": [
       "error",
       {
         "endOfLine": "auto"
       }
-    ]
+    ],
+    "react/prop-types": "off"
   }
 }
