--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,14 @@
     "**/dist": true,
     "**/yarn.lock": true
   },
-  "cSpell.words": ["Chakra", "infisical", "Mirrorful", "posthog"],
+  "cSpell.words": [
+    "Chakra",
+    "infisical",
+    "Mirrorful",
+    "posthog",
+    "tinycolor",
+    "Danilowicz"
+  ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   }
