--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,11 +13,12 @@
   },
   "cSpell.words": [
     "Chakra",
+    "Danilowicz",
     "infisical",
     "Mirrorful",
+    "multipler",
     "posthog",
-    "tinycolor",
-    "Danilowicz"
+    "tinycolor"
   ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
