Refactor color picker component and color display for HSL editing, 0.0.7 local storage migration, and require DEFAULT key (#322)
---------

Co-authored-by: Pranav2612000 <pranav2000joglekar@gmail.com>
Co-authored-by: alexdanilowicz <alex.danilowicz@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,15 @@
     "**/dist": true,
     "**/yarn.lock": true
   },
-  "cSpell.words": ["Chakra", "infisical", "Mirrorful", "posthog"],
+  "cSpell.words": [
+    "Chakra",
+    "Danilowicz",
+    "infisical",
+    "Mirrorful",
+    "multipler",
+    "posthog",
+    "tinycolor"
+  ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   }
