--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "server",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "start": "node lib/server.js",
