--- a/fern/api/definition/registry.yml
+++ b/fern/api/definition/registry.yml
@@ -38,20 +38,35 @@ service:
         fileId: commons.FileId
       response: fileResponse
 
+    getStore:
+      method: GET
+      path: /store/{storeId}
+      path-parameters:
+        storeId: commons.StoreId
+      response: mirrorfulStore
+
+    updateStore:
+      method: POST
+      path: /store/{storeId}
+      path-parameters:
+        storeId: commons.StoreId
+      response: mirrorfulStore
+      request:
+        name: updateStoreRequest
+        body: mirrorfulStore
+
 types:
+  mirrorfulStore:
+    properties:
+      primitives: unknown # object
+      themes: unknown # array of objects
+      files: unknown # array of strings
   createLibraryResponse:
     properties:
       signedS3UploadUrl: string
-      libraryId: LibraryId
+      libraryId: commons.LibraryId
       name: string
   fileResponse:
     properties:
       fileId: commons.FileId
       code: string
-  LibraryId:
-    type: string
-    docs: This should be the Library Id
-
-errors:
-  FileDoesNotExistError:
-    status-code: 404
