chore: update eslint config for web, core to show warnings for stray logs

--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -22,6 +22,7 @@
     "react/display-name": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
+    "no-console": ["warn", { "allow": ["error"] }],
     "prettier/prettier": [
       "error",
       {
