--- a/fern/api/definition/store.yml
+++ b/fern/api/definition/store.yml
@@ -9,7 +9,7 @@ service:
   path-parameters:
     orgId: commons.OrgId
   endpoints:
-    getStore:
+    getStoreByLoggedInUserId:
       method: GET
       path: /store/{storeId}
       path-parameters:
