--- a/fern/api/definition/commons.yml
+++ b/fern/api/definition/commons.yml
@@ -2,10 +2,7 @@ types:
   OrgId: string
   FileId: string
   StoreId: string
+  UserId: string
   LibraryId:
     type: string
     docs: This should be the Library Id
-
-errors:
-  ObjectDoesNotExistError:
-    status-code: 404
