--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,6 +30,7 @@
     "@emotion/styled": "^11.10.6",
     "@hello-pangea/color-picker": "^3.2.2",
     "@mirrorful-fern/api-client": "0.0.578",
+    "@propelauth/react": "^2.0.7",
     "eslint-plugin-react": "^7.32.2",
     "framer-motion": "^10.6.0",
     "json5": "^2.2.3",
