Set up local db and dont use infisical on dev

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node lib/server.js",
-    "dev": "infisical run -- nodemon src/server.ts",
+    "i-dev": "infisical run -- nodemon src/server.ts",
+    "dev": "nodemon src/server.ts",
     "format": "prettier --write src/**",
     "format:check": "prettier --check src/**",
     "lint": "eslint",
@@ -29,6 +30,7 @@
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
+    "dotenv": "^16.0.3",
     "eslint": "^8.33.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
