--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node lib/server.js",
-    "dev": "infisical run -- nodemon src/server.ts",
+    "i-dev": "infisical run -- nodemon src/server.ts",
+    "dev": "nodemon src/server.ts",
     "format": "prettier --write src/**",
     "format:check": "prettier --check src/**",
     "lint": "eslint",
