Add Product Hunt and Github stars to website

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-day-picker": "^8.8.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-github-btn": "^1.4.0",
     "react-hook-form": "^7.45.4",
     "react-loading-skeleton": "^3.3.1",
     "react-remove-scroll": "^2.5.5",
